Fixed image going out of bounds

--- a/client/src/styles/About.css
+++ b/client/src/styles/About.css
@@ -50,7 +50,7 @@ body {
 
 .images {
     width: 250px;
-    height: 250px;
+    height: 225px;
 }
 .container {
     width: auto;
